fix overflow in admin index

--- a/Frontend/wwwroot/css/admin.css
+++ b/Frontend/wwwroot/css/admin.css
@@ -253,6 +253,7 @@
     align-items: center;
     background-color: white;
     border-radius: 10px;
+    overflow: scroll;
   }
   .list_box hr {
     width: 95%;
